--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
         <p class="title text-center">SERVICE</p>
         <hr class="title_line">
       </div>
+
+   <div class="col-12">
       <div id="btn"> 
         <a href="javascript:;"></a> 
         <a href="javascript:;"></a> </div>
@@ -177,7 +179,7 @@
     <li><img src="img/logo6.png"></li>
   </ul>
 </div>
-
+</div>
     <!---<div class="row">
       <div class="col-sm-4">
         <img src="img/logo1.png">
