--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
         <br>
         <br>
         <br>
-        <br>
         <p>
 國立陽明交通大學傳播與科技學系 大學部二年級<br>
 臺中市立文華高中 畢業<br>
 臺中市立安和國中 畢業
         </p>
-
+    <div class = "socialmedia">
      <a href ="https://www.facebook.com/profile.php?id=100001363354731" target="_blank">
         <img src="img/fb.png">
     </a>
@@ -102,7 +101,7 @@
     <a href ="mailto:yeh0815428.cts08@nctu.edu.tw"target="_blank">
       <img src="img/email.png">
     </a>
-
+       </div>   
       </div>
     </div>
   </div>
